2010-02-28  Jaroslav Hajek  <highegg@gmail.com>

	* Array-util.cc (gripe_index_out_of_range): Throw errors with id.
	(gripe_nonconformant): Likewise.
	(error_id_index_out_of_bounds, error_id_invalid_index,
	error_id_nonconformant_args): New variables.
	(gripe_invalid_index): New function.
	* Array-util.h: Declare them.
	* Array.cc (Array<T>::checkelem): Throw invalid-index when negative
	indices are encountered.

2010-02-27  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::diag): Handle case of diag (szv) when szv
	is a sparse vector with nnz = 0.

2010-02-27  Jaroslav Hajek  <highegg@gmail.com>

	* Array-util.cc (gripe_index_out_of_range): New function.
	* Array.cc (Array<T>::range_error): Remove.
	(Array<T>::checkelem): Rewrite.
	(Array<T>::index, Array<T>::delete_elements): Simplify.
	* DiagArray2.cc (DiagArray2::checkelem): Use gripe_index_out_of_range.
	* Range.cc (Range::checkelem, Range::index): Ditto.

2010-02-26  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (OP_DUP_FCN): Remove.
	(mx_inline_dup): Remove.
	(mx_inline_not): Remove.
	(mx_inline_make_complex): Remove.
	(mx_inline_change_sign): Remove.
	(mx_inline_fabs_dup): Remove.
	(mx_inline_cabs_dup): Remove.
	(mx_inline_imag_dup): Remove.
	(mx_inline_real_dup): Remove.
	(mx_inline_conj_dup): Remove.
	(mx_inline_change_sign): Remove.

2010-02-26  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (Array<T>::ArrayRep): Simplify copy constructor. Add
	conversion constructor.
	(Array<T>): Remove pointer acquiring ctors.
	(Array<T>::maybe_economize): Update.
	(Array<T>::make_unique): Update.
	* Array.cc (Array<T>::fill): Update.

	* MArray.h (MArray<T>::MArray<T> (T *, ...)): Remove.
	* DiagArray2.h (DiagArray2<T>::DiagArray2<T> (T *, ...)): Remove.
	* MDiagArray2.h (MDiagArray2<T>::MDiagArray2<T> (T *, ...)): Remove.
	* Array3.h (Array3<T>::Array3<T> (T *, ...)): Remove.

	* dColVector.h (ColumnVector::ColumnVector (T *, ...)): Remove.