@@ -164,7 +164,4 @@ template OCTAVE_API std::ostream& operator << (std::ostream&, const Array<double
 #include "DiagArray2.h"
 #include "DiagArray2.cc"
 
-#ifdef _MSC_VER
-template class OCTAVE_API DiagArray2<double>::Proxy;
-#endif
 template class OCTAVE_API DiagArray2<double>;
